优化计算时间展开图的n+1问题