@@ -98,7 +98,7 @@ public class LocalGraphBuilder {
 
         // 1.3 路过出发站和目的站的所有列车（可能有更优方案）
         // 找出所有经过 from 或 to 的列车，减少到一定程度的车次
-        List<TrainStationDO> viaTrains = trainStationMapper.selectList(
+        List<TrainStationDO> viaTrains =trainStationMapper.selectList(
                 new LambdaQueryWrapper<TrainStationDO>()
                         .in(TrainStationDO::getStationName, Arrays.asList(from, to))
                         .eq(TrainStationDO::getRunDate, date)
@@ -133,9 +133,15 @@ public class LocalGraphBuilder {
                         .orderByAsc(TrainStationDO::getSequence)
         );
 
+        List<Long> trainIds=trains.stream().map(TrainDO::getId).toList();
+
+        Map<Long,List<Integer>> seatTypeMap= batchGetSeatTypes(trainIds);
+
         // 按车次分组
         Map<String, List<TrainStationDO>> stationsByTrain = allStations.stream()
                 .collect(Collectors.groupingBy(TrainStationDO::getTrainNumber));
+
+        Map<Long,List<FareCalculationResultDTO>> fareMap=batchGetSeatPrices(trains,stationsByTrain,seatTypeMap);
 
         // Step 4: 为每个车次的每段区间创建边
         for (Map.Entry<String, List<TrainStationDO>> entry : stationsByTrain.entrySet()) {
@@ -146,8 +152,10 @@ public class LocalGraphBuilder {
             if (train == null || stations.size() < 2) continue;
 
             // 获取座位类型和余票信息
-            List<Integer> seatTypes = getSeatTypes(train.getId());
-            List<TrainEdge.SeatPrice> seatPrices = getSeatPrices(train, stations,seatTypes);
+            List<Integer> seatTypes = seatTypeMap.get(train.getId());
+            List<TrainEdge.SeatPrice> seatPrices = fareMap.get(train.getId()).stream()
+                    .map(f->new TrainEdge.SeatPrice(f.getSeatType(),f.getTotalFare()))
+                    .toList();
             List<TrainEdge.SeatRemaining> seatRemainings = getSeatRemainings(train, stations);
 
 
@@ -198,32 +206,47 @@ public class LocalGraphBuilder {
     /**
      * 构建完整图（全量数据）
      * 适用于离线预计算场景
+     *
+     * 目前 优化版本 优化n+1 全量计算时间展开图
+     * 构建中转站的边计算算法能否更进一步？
      */
     public TransitGraph buildFullGraph(LocalDate date) {
         TransitGraph graph = new TransitGraph();
 
+        //全表搜索 不要用缓存
         List<TrainStationDO> allStations = trainStationMapper.selectList(
                 new LambdaQueryWrapper<TrainStationDO>()
-                        .eq(TrainStationDO::getRunDate, date)
+//                        .eq(TrainStationDO::getRunDate, date) //暂时不用date 实际运营才用
                         .orderByAsc(TrainStationDO::getSequence)
         );
 
+        List<Long> trainIds=allStations.stream().map(TrainStationDO::getTrainId).distinct().toList();
+        List<TrainDO> trains=trainMapper.selectList(
+                new LambdaQueryWrapper<TrainDO>()
+                        .in(TrainDO::getId,trainIds)
+        );
+        Map<String,TrainDO> trainDOMap=trains.stream()
+                .collect(Collectors.toMap(TrainDO::getTrainNumber,t->t));
+
+        Map<Long,List<Integer>> seatTypeMap= batchGetSeatTypes(trainIds);
+
         Map<String, List<TrainStationDO>> stationsByTrain = allStations.stream()
                 .collect(Collectors.groupingBy(TrainStationDO::getTrainNumber));
+
+        Map<Long,List<FareCalculationResultDTO>> fareMap=batchGetSeatPrices(trains,stationsByTrain,seatTypeMap);
 
         for (Map.Entry<String, List<TrainStationDO>> entry : stationsByTrain.entrySet()) {
             String trainNumber = entry.getKey();
             List<TrainStationDO> stations = entry.getValue();
 
-            TrainDO train = trainMapper.selectOne(
-                    new LambdaQueryWrapper<TrainDO>()
-                            .eq(TrainDO::getTrainNumber, trainNumber)
-            );
+            TrainDO train = trainDOMap.get(trainNumber);
 
             if (train == null || stations.size() < 2) continue;
 
-            List<Integer> seatTypes = getSeatTypes(train.getId());
-            List<TrainEdge.SeatPrice> seatPrices = getSeatPrices(train, stations,seatTypes);
+            List<Integer> seatTypes =seatTypeMap.get(train.getId());
+            List<TrainEdge.SeatPrice> seatPrices = fareMap.get(train.getId()).stream()
+                    .map(f->new TrainEdge.SeatPrice(f.getSeatType(),f.getTotalFare()))
+                    .toList();
             List<TrainEdge.SeatRemaining> seatRemainings = getSeatRemainings(train, stations);
 
             for (int i = 0; i < stations.size() - 1; i++) {
@@ -231,7 +254,7 @@ public class LocalGraphBuilder {
                 TrainStationDO toStation = stations.get(i + 1);
 
                 LocalDateTime departureDateTime = buildDateTime(date, fromStation.getDepartureTime(),
-                        fromStation.getArriveDayDiff());
+                        0);
                 LocalDateTime arrivalDateTime = buildDateTime(date, toStation.getArrivalTime(),
                         toStation.getArriveDayDiff());
 
@@ -262,27 +285,54 @@ public class LocalGraphBuilder {
      * 构建日期时间（含日期偏移）
      */
     private LocalDateTime buildDateTime(LocalDate baseDate, LocalTime time, int dayOffset) {
-        return baseDate.plusDays(dayOffset).atTime(time);
+        return baseDate.plusDays(dayOffset).atTime(time!=null? time :LocalTime.now());
     }
 
     /**
-     * 获取座位类型列表
+     * 批量获取座位类型列表
      */
-    private List<Integer> getSeatTypes(Long trainId) {
-        return safeCacheTemplate.safeGet(
-                CacheConstant.trainSeatType(trainId),
-                ()-> seatMapper.selectList(
-                                new LambdaQueryWrapper<SeatDO>()
-                                        .select(SeatDO::getSeatType)
-                                        .eq(SeatDO::getTrainId, trainId)
-                                        .groupBy(SeatDO::getSeatType)
-                        ).stream()
-                        .map(SeatDO::getSeatType)
-                        .collect(Collectors.toList()),
+    private Map<Long,List<Integer>> batchGetSeatTypes(List<Long> tIds) {
+        List<String> seatTypeKeys=tIds.stream()
+                .map(CacheConstant::trainSeatType)
+                .toList();
+        List<Object[]> seatTypeArgs=tIds.stream()
+                .map(t-> new Object[]{t})
+                .toList();
+
+        List<List<Integer>> seatTypeList=safeCacheTemplate.safeBatchGet(
+                seatTypeKeys,
+                (List<Object[]> args)->{
+                    List<Long> trainIds=args.stream()
+                            .map(arg->(Long)arg[0])
+                            .toList();
+                    Map<Long,Integer> indexmap=new HashMap<>();
+                    List<List<Integer>> result=new ArrayList<>(args.size());
+                    for(int i=0;i<trainIds.size();i++){
+                        indexmap.put(trainIds.get(i),i);
+                        result.add(new ArrayList<>());
+                    }
+                    LambdaQueryWrapper<SeatDO> lambdaQueryWrapper=new LambdaQueryWrapper<SeatDO>()
+                            .select(SeatDO::getSeatType,SeatDO::getTrainId)
+                            .in(SeatDO::getTrainId,trainIds)
+                            .groupBy(SeatDO::getSeatType,SeatDO::getTrainId);
+                    List<Map<String,Object>> objects=seatMapper.selectMaps(lambdaQueryWrapper);
+                    for (Map<String,Object> objectMap:objects){
+                        result.get(indexmap.get(objectMap.get("train_id"))).add((Integer) objectMap.get("seat_type"));
+                    }
+                    return result;
+//
+                },
                 new TypeReference<List<Integer>>(){},
+                seatTypeArgs,
                 3,
                 TimeUnit.DAYS
         );
+        Map<Long,List<Integer>> seatTypemap=new HashMap<>();
+        for (int i=0;i<tIds.size();i++){
+            seatTypemap.put(tIds.get(i),seatTypeList.get(i));
+        }
+
+        return seatTypemap;
     }
 
     /**
@@ -312,6 +362,37 @@ public class LocalGraphBuilder {
                 .stream()
                 .map(result-> new TrainEdge.SeatPrice(result.getSeatType(), result.getTotalFare()))
                 .toList();
+    }
+    /**
+     * 批量获取票价信息（按区间）
+     */
+    private Map<Long,List<FareCalculationResultDTO>> batchGetSeatPrices(List<TrainDO> trains,Map<String, List<TrainStationDO>> stations,Map<Long,List<Integer>> seatTypeMap) {
+        List<FareCalculationRequestDTO> fareCalculationRequestDTOS=new ArrayList<>();
+        for(int i=0;i<trains.size();i++){
+            TrainDO train=trains.get(i);
+            String trainNumber=train.getTrainNumber();
+            for (int j = 0; j < stations.get(trainNumber).size() - 1; j++) {
+                String from = stations.get(trainNumber).get(j).getStationName();
+                String to = stations.get(trainNumber).get(j + 1).getStationName();
+
+                for(int seatType:seatTypeMap.get(trains.get(i).getId())) {
+                    fareCalculationRequestDTOS.add(FareCalculationRequestDTO.builder()
+                            .departureStation(from)
+                            .arrivalStation(to)
+                            .trainId(trains.get(i).getId())
+                            .trainNumber(trains.get(i).getTrainNumber())
+                            .seatType(seatType)
+                            .isPeakSeason(false)
+                            .trainBrand(trains.get(i).getTrainBrand())
+                            .passengerType(PassengerTypeEnum.ADULT.getCode())
+                            .build()
+                    );
+                }
+            }
+        }
+        return fareCalculationService.batchCalculateFare(fareCalculationRequestDTOS)
+                .stream()
+                .collect(Collectors.groupingBy(FareCalculationResultDTO::getTrainId));
     }
 
     /**
